--- a/css/scss/_login_form.scss
+++ b/css/scss/_login_form.scss
@@ -14,3 +14,12 @@
     left: 50%;
     width: 400px;
 }
+
+#register {
+    display: none;
+    z-index: 999;
+    position: fixed;
+    top: 150px;
+    left: 50%;
+    width: 400px;
+}
